--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -11,6 +11,7 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  touch-action: manipulation; /* 解决移动端300ms延迟*/
 }
 
 /* Sections
